--- a/styles/components/header/_header.scss
+++ b/styles/components/header/_header.scss
@@ -14,6 +14,7 @@
   .logo {
     display: flex;
     font-size: 2.75rem;
+    text-decoration: none;
     font-weight: 600;
     text-align: center;
     margin: auto 0;
