--- a/styles/modules/description/_description.scss
+++ b/styles/modules/description/_description.scss
@@ -13,7 +13,7 @@
   }
   .des-declaration {
     width: 40vw;
-    text-align: center;
+    text-align: justify;
     font-size: 2.8rem;
     font-weight: 500;
   }
@@ -32,7 +32,6 @@
         display: flex;
         width: 20%;
         font-size: 3rem;
-        // color: var(--font-blue);
         justify-content: left;
       }
       .dec-text {
