--- a/styles/modules/introduction/_introduction.scss
+++ b/styles/modules/introduction/_introduction.scss
@@ -59,10 +59,11 @@
     padding-bottom: 30px;
   }
   .intro-para {
-    font-size: 1.75rem;
+    font-size: 1.85rem;
     text-align: center;
     letter-spacing: 0.05em;
     padding-bottom: 6vh;
+    text-align: justify;
   }
   .stats-container {
     display: grid;
