--- a/styles/modules/landing/_landing.scss
+++ b/styles/modules/landing/_landing.scss
@@ -97,6 +97,7 @@
       padding-bottom: 10vh;
 
       .main-link {
+        background-color: transparent;
         text-align: center;
         flex-grow: 1;
         text-decoration: none;
