--- a/styles/modules/introduction/_introduction.scss
+++ b/styles/modules/introduction/_introduction.scss
@@ -64,6 +64,7 @@
     letter-spacing: 0.05em;
     padding-bottom: 6vh;
     text-align: justify;
+    color: white;
   }
   .stats-container {
     display: grid;
