--- a/styles/modules/landing/_landing.scss
+++ b/styles/modules/landing/_landing.scss
@@ -11,7 +11,8 @@
     top: 0;
     left: 0;
     z-index: -1;
-    // opacity: 85%;
+    opacity: 85%;
+    filter: brightness(0.65) saturate(1.25);
     img {
       object-fit: cover;
     }
@@ -58,6 +59,7 @@
         line-height: 4.5rem;
         color: white;
         text-shadow: 0 0 10px black;
+        
       }
       .main-socials {
         height: 320px;
