--- a/styles/modules/_landing-page.scss
+++ b/styles/modules/_landing-page.scss
@@ -4,3 +4,4 @@
 @import "/styles/modules/portfolio/portfolio";
 @import "/styles/modules/partners/partners";
 @import "/styles/modules/contact-us/contact-us";
+@import "/styles/modules/word-cloud/word-cloud";
