--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,500&family=Poppins:wght@100&display=swap');
+
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
-  font-family: monospace;
+  font-family: 'Nunito', sans-serif;
   // font-family: var(--primary-font);
 }
 .img-container {
