--- a/styles/components/footer/_footer.scss
+++ b/styles/components/footer/_footer.scss
@@ -31,6 +31,11 @@
         padding-bottom: 3vh;
         padding: 0;
         align-self: center;
+
+        .ft-trade-mark{
+          font-size: 1.5rem;
+          font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
       }
     }
     .ft-message-para {
