--- a/styles/modules/description/_description.scss
+++ b/styles/modules/description/_description.scss
@@ -5,42 +5,62 @@
   padding-bottom: 10vh;
   margin: 0 auto;
   background-color: white;
+
   .des-heading {
-    font-size: 1.5rem;
+    font-size: 5rem;
     color: var(--font-blue);
     letter-spacing: 0.1em;
     margin-bottom: 10px;
   }
+
   .des-declaration {
     width: 40vw;
     text-align: justify;
     font-size: 2.8rem;
     font-weight: 500;
   }
+
   .dec-points {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     border-top: var(--common-border-black);
     margin-top: 50px;
     padding-top: 50px;
+
     .dec-point {
+      cursor: pointer;
       padding: 4vh 2vh;
       display: flex;
-      width: 100%;
       justify-content: space-evenly;
+      width: 100%;
+
       svg {
         display: flex;
         width: 20%;
         font-size: 3.5rem;
         justify-content: left;
       }
+
       .dec-text {
-        width: 70%;
-        text-align: left;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 1rem;
+        width: 30vw;
+        height: 30vh;
+        text-align: justify;
+        color: white;
+        background-color: var(--font-blue);
+        padding: 0 30px;
+        font-size: 0.7rem;
+
         .dec-point-head {
           font-size: 2rem;
           font-weight: 600;
         }
+
         .dec-point-para {
           font-size: 1.25rem;
           margin-top: 20px;
@@ -48,5 +68,6 @@
       }
     }
   }
+
   @import "./description-mobile";
 }
